@@ -374,10 +374,9 @@ xkl_config_rec_get_from_root_window_property(XklConfigRec * data,
 					       --varlen);
 					var[varlen] = '\0';
 					/* Resize the original layout */
-					((char *)
-					 g_realloc(*layout,
-						   laylen + 1))[laylen] =
-					    '\0';
+					*layout =
+					    g_realloc(*layout, laylen + 1);
+					(*layout)[laylen] = '\0';
 				}
 			}
 			layout++;
