@@ -1,3 +1,10 @@
+2009-06-02  svu
+
+	* libxklavier/xklavier_config_iso.c: changed g_snprintf to more
+	semantically correct g_strlcpy, just to eliminate the warning.
+	* libxklavier/xklavier_props.c: fixed potential crash, reassigning the
+	pointer after realloc (credits go to Canonical)
+
 2009-05-28  svu
 
 	* libxklavier/xklavier_config.c: fixed handling of translated XML
